# deep-dive-2526-p3-jwmj

./: .flake8  .gitignore  .pylintrc  LICENCE  README.md  dorpsvereneging.db  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  pylint.yml
Begin_midden_en_eind/Documentation/: Deep Dive 2526(PVE).docx  pve.md  reflectie-3-julian-radix.md  reflectie-3-mikey-kooijman.md  reflectie-mikey.md  reflectie-p3-jesse-folkers.md  reflectie-p3-wouter-pietersma.md
api/: main.py  pyproject.toml  requirements.txt
api/models/: activities.py  bestuurders.py  news.py
api/routers/v1/: __init__.py  activities.py  bestuurders.py  health.py  news.py
api/schemas/: activities.py  bestuurders.py  news.py
api/services/: activities_service.py  bestuurders_service.py  news_service.py
api/tests/: test_api.py
api/utils/: database.py
api/v1/: __init__.py  health.py  news.py
framework-design/: package-lock.json
src/: input.css  main.js
src/components/: EmptyState.js  ErrorState.js  LoadingSpinner.js  NewsCard.js  PageBanner.js  footer.js  header.js  lidmaatschappen.js  personen.js
src/pages/: 404.js  Activiteiten.js  Bestuur.js  Contact.js  Home.js  Nieuws.js  OverOns.js
workflows/: lint.yml
